edits, fixing menu alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,15 +15,15 @@ footer {
 }
 
 h1 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
   }
   
 h2 {
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
   }
   
 p {
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
   }
 
 .wrapper{
@@ -49,13 +49,14 @@ p {
     padding-left: 5px;
     padding-right: 5px;
     float: left;
-    height: 100%
+    height: 100%;
 }
 
 .menu {
 float: right;
 text-align: right;
 vertical-align: center;
+height: 100%;
 }
 
 .bigcontainer {
@@ -138,18 +139,24 @@ ul.nav {
     padding: 0;
     overflow: hidden;
     background-color: #ffffff;
+    height: 100%;
   }
   
   li.nav {
     float: left;
+    height: 100%;
+    vertical-align: center;
   }
   
   li.nav a {
     display: block;
     color: #333;
+    font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';
+    font-size: 15px;
     text-align: center;
-    padding: 14px 16px;
+    padding: 40px 16px;
     text-decoration: none;
+    height: 100%;
   }
   
   li.nav a:hover {
